--- a/views/pages/warehouse/awb/no-docs.ejs
+++ b/views/pages/warehouse/awb/no-docs.ejs
@@ -29,7 +29,7 @@
               <td><%=awb.dateCreated%></td>
               <td><%=awb.customer.pmb %></td>
               <td><a href="manage/<%=awb._id%>/preview"><%=awb._id%></a></td>
-              <td><%=awb.customer.firstName + ' ' + awb.customer.lastName%></td>
+              <td><%=helpers.getFullName(awb.customer)%></td>
               <td><%=awb.shipper.name %></td>
               <td><%=awb.carrier.name %></td>
               <td><%=awb.packages.length %></td>
