--- a/views/pages/admin/customers/list.ejs
+++ b/views/pages/admin/customers/list.ejs
@@ -25,10 +25,10 @@
               <tr data-record="<%= customer.id %>">
                 <td><%=customer.company.name%></td>
                 <td scope="row"><%=customer.pmb%></td>
-                <td><%=customer.firstName + ' ' + customer.lastName%></td>
+                <td><%=helpers.getFullName(customer)%></td>
                 <td><%=customer.email%></td>
                 <td><%=customer.telephone %></td>
-                <td><%=customer.location.name %></td>
+                <td><%=customer.location && customer.location.name %></td>
                 <td>
                   <a href='manage/<%=customer.id%>/get'><i class="fas fa-user-edit"></i></a>
                   <a href='#' class='rm-customer ml-3' data-id='<%=customer.id%>'><i class="fas fa-trash"></i></a>
