Modified print label method.

--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -79,7 +79,7 @@
                 <a
                   class="btn btn-link btn-primary btn-print-pkg"
                   data-toggle="modal"
-                  data-id="<%=pkg.id%>"
+                  data-id="<%=pkg._id%>"
                   data-original-title="Print Label"
                   data-target="#print-popup"
                 >
