--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -48,7 +48,7 @@
                 <td><%= pkg.awbdeliveryMethod %></td>
                 <% } %>
                 <td class="text-center">
-                  <a class="btn btn-link btn-primary btn-print-pkg" data-toggle="modal" data-id="<%=pkg.id%>"
+                  <a class="btn btn-link btn-primary btn-print-pkg" data-toggle="modal" data-id="<%=pkg._id%>"
                     data-original-title="Print Label" data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                 </td>
               </tr>
