--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -62,7 +62,7 @@
           </thead>
           <tbody>
             <% packages.forEach(function(pkg){ %>
-            <tr data-record="<%= pkg.id %>">
+            <tr data-record="<%= pkg._id %>">
               <td>
                 <input type="checkbox" class="package-select" />
               </td>
