--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -42,10 +42,10 @@
           <div class='col-md-9'>
             <input type='hidden' id="pgmode" value='flight' />
             <div class="form-group form-show-validation row">
-              <label for="tail_number" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Plane</label>
+              <label for="tailNumber" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Plane</label>
               <div class="col-lg-8 col-md-8 col-sm-8">
-                <input type='text' class='form-control' id='tail_number' placeholder="Plane"
-                  value="<%= plane.tail_number %>" readonly />
+                <input type='text' class='form-control' id='tailNumber' placeholder="Plane"
+                  value="<%= plane.tailNumber %>" readonly />
               </div>
             </div>
             <% if (airportFrom) { %>
@@ -151,7 +151,7 @@
   </div>
 </div>
 
-<div class="modal fade" id="shipManifest" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+<div class="modal fade" id="receiveManifest" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
   aria-hidden="true" style="display: none;">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
