--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,6 +71,7 @@
 	<script src="../assets/js/core/popper.min.js"></script>
 	<script src="../assets/js/core/bootstrap.min.js"></script>
 	<script src="../assets/js/atlantis.min.js"></script>
+	<script src="../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
 	<script src="../js/auth/login.js"></script>
 </body>
 
