--- a/views/pages/warehouse/delivery/preview.ejs
+++ b/views/pages/warehouse/delivery/preview.ejs
@@ -27,9 +27,9 @@
               <tr data-record="<%= package.id %>">
                 <td><%= package.id %></td>
                 <td><%= package.customer && package.customer.pmb %></td>
-                <td><%= package.getFullName(package.customer) %></td>
+                <td><%= helpers.getFullName(package.customer) %></td>
                 <td><%= package.awbId %></td>
-                <td><%= package.getFullName(package.shipper) %></td>
+                <td><%= helpers.getFullName(package.shipper) %></td>
                 <td><%= package.weight %> lbs</td>
               </tr>
               <% }) %>
