Fix - Temporary hide the print controller and enable issue.

--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -308,11 +308,12 @@
 									<span class="sub-item">Change Password</span>
 								</a>
 							</li>
-							<li <% if (page.includes('/account/change-printer')) { %> class="active" <% } %>>
+							<!-- Temporary hide the print section -->
+							<!-- <li <% if (page.includes('/account/change-printer')) { %> class="active" <% } %>>
 								<a href="/account/change-printer">
 									<span class="sub-item">Printer</span>
 								</a>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 				</li>
