--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -170,94 +170,121 @@
 	<%- block('scripts').toString() %>
 
 	<script>
-
+		$('.filter-date').datetimepicker({
+		  format: 'MM-DD-YYYY',
+		  useCurrent: false,
+		  showTodayButton: true,
+		  showClear: true,
+		  toolbarPlacement: 'bottom',
+		  sideBySide: true,
+		  icons: {
+		    date: 'fa fa-calendar',
+		    up: 'fa fa-arrow-up',
+		    down: 'fa fa-arrow-down',
+		    previous: 'fa fa-chevron-left',
+		    next: 'fa fa-chevron-right',
+		    today: 'fa fa-clock',
+		    clear: 'fa fa-trash',
+		  },
+		});
+		$.ajax({
+		 url: '/api/warehouse/get_packages_status',
+		 dataType: "json",
+		 type: "GET",
+		 success: function(data){
+		 	chartData(data)
+		 }
+		})
 		$('.flightdate').datetimepicker({
 			format: 'MM/DD/YYYY',
 		});
-		Circles.create({
-			id: 'circles-1',
-			radius: 45,
-			value: 60,
-			maxValue: 100,
-			width: 7,
-			text: 5,
-			colors: ['#f1f1f1', '#FF9E27'],
-			duration: 400,
-			wrpClass: 'circles-wrp',
-			textClass: 'circles-text',
-			styleWrapper: true,
-			styleText: true
-		})
-
-		Circles.create({
-			id: 'circles-2',
-			radius: 45,
-			value: 70,
-			maxValue: 100,
-			width: 7,
-			text: 36,
-			colors: ['#f1f1f1', '#2BB930'],
-			duration: 400,
-			wrpClass: 'circles-wrp',
-			textClass: 'circles-text',
-			styleWrapper: true,
-			styleText: true
-		})
-
-		Circles.create({
-			id: 'circles-3',
-			radius: 45,
-			value: 40,
-			maxValue: 100,
-			width: 7,
-			text: 12,
-			colors: ['#f1f1f1', '#F25961'],
-			duration: 400,
-			wrpClass: 'circles-wrp',
-			textClass: 'circles-text',
-			styleWrapper: true,
-			styleText: true
-		})
-
-		// var totalIncomeChart = document.getElementById('totalIncomeChart').getContext('2d');
-
-		// var mytotalIncomeChart = new Chart(totalIncomeChart, {
-		// 	type: 'bar',
-		// 	data: {
-		// 		labels: ["S", "M", "T", "W", "T", "F", "S", "S", "M", "T"],
-		// 		datasets: [{
-		// 			label: "Total Income",
-		// 			backgroundColor: '#ff9e27',
-		// 			borderColor: 'rgb(23, 125, 255)',
-		// 			data: [6, 4, 9, 5, 4, 6, 4, 3, 8, 10],
-		// 		}],
-		// 	},
-		// 	options: {
-		// 		responsive: true,
-		// 		maintainAspectRatio: false,
-		// 		legend: {
-		// 			display: false,
-		// 		},
-		// 		scales: {
-		// 			yAxes: [{
-		// 				ticks: {
-		// 					display: false //this will remove only the label
-		// 				},
-		// 				gridLines: {
-		// 					drawBorder: false,
-		// 					display: false
-		// 				}
-		// 			}],
-		// 			xAxes: [{
-		// 				gridLines: {
-		// 					drawBorder: false,
-		// 					display: false
-		// 				}
-		// 			}]
-		// 		},
-		// 	}
-		// });
-
+		function chartData(data){
+			Circles.create({
+				id: 'circles-1',
+				radius: 45,
+				value: data.received_fill,
+				maxValue: data.total_packages,
+				width: 7,
+				text: data.received_fill.toString(),
+				colors: ['#f1f1f1', '#FF9E27'],
+				duration: 400,
+				wrpClass: 'circles-wrp',
+				textClass: 'circles-text',
+				styleWrapper: true,
+				styleText: true
+			})
+			Circles.create({
+				id: 'circles-2',
+				radius: 45,
+				value: data.loaded_craft,
+				maxValue: data.total_packages,
+				width: 7,
+				text: data.loaded_craft.toString(),
+				colors: ['#f1f1f1', '#2BB930'],
+				duration: 400,
+				wrpClass: 'circles-wrp',
+				textClass: 'circles-text',
+				styleWrapper: true,
+				styleText: true
+			})
+			Circles.create({
+				id: 'circles-3',
+				radius: 45,
+				value: data.in_transit,
+				maxValue: data.total_packages,
+				width: 7,
+				text: data.in_transit.toString(),
+				colors: ['#f1f1f1', '#F25961'],
+				duration: 400,
+				wrpClass: 'circles-wrp',
+				textClass: 'circles-text',
+				styleWrapper: true,
+				styleText: true
+			})
+			Circles.create({
+				id: 'circles-4',
+				radius: 45,
+				value: data.received_nas,
+				maxValue: data.total_packages,
+				width: 7,
+				text: data.received_nas.toString(),
+				colors: ['#f1f1f1', '#FF9E27'],
+				duration: 400,
+				wrpClass: 'circles-wrp',
+				textClass: 'circles-text',
+				styleWrapper: true,
+				styleText: true
+			})
+			Circles.create({
+				id: 'circles-5',
+				radius: 45,
+				value: data.ready_pd,
+				maxValue: data.total_packages,
+				width: 7,
+				text: data.ready_pd.toString(),
+				colors: ['#f1f1f1', '#2BB930'],
+				duration: 400,
+				wrpClass: 'circles-wrp',
+				textClass: 'circles-text',
+				styleWrapper: true,
+				styleText: true
+			})
+			Circles.create({
+				id: 'circles-6',
+				radius: 45,
+				value: data.delivered,
+				maxValue: data.total_packages,
+				width: 7,
+				text: data.delivered.toString(),
+				colors: ['#f1f1f1', '#F25961'],
+				duration: 400,
+				wrpClass: 'circles-wrp',
+				textClass: 'circles-text',
+				styleWrapper: true,
+				styleText: true
+			})
+		}	
+		
 		$('#lineChart').sparkline([105, 103, 123, 100, 95, 105, 115], {
 			type: 'line',
 			height: '70',
@@ -266,6 +293,145 @@
 			lineColor: '#ffa534',
 			fillColor: 'rgba(255, 165, 52, .14)'
 		});
+		function userStatistics(data) {
+			let labels = Object.keys(data);
+
+			let received_fill = [];
+			let received_nas = [];
+			let loaded_craft = [];
+			let ready_pd = [];
+			let delivered = [];
+
+			labels.forEach((key) => {
+				received_fill.push(data[key]['received_fill']);
+				received_nas.push(data[key]['received_nas']);
+				loaded_craft.push(data[key]['loaded_craft']);
+				ready_pd.push(data[key]['ready_pd']);
+				delivered.push(data[key]['delivered']);
+			});
+
+			var ctx = document.getElementById('statisticsChart').getContext('2d');
+			
+			var statisticsChart = new Chart(ctx, {
+				type: 'line',
+				data: {
+					labels: labels,
+					datasets: [ {
+						label: "Received FILL",
+						borderColor: '#f3545d',
+						pointBackgroundColor: 'rgba(243, 84, 93, 0.6)',
+						pointRadius: 0,
+						backgroundColor: 'rgba(243, 84, 93, 0.4)',
+						legendColor: '#f3545d',
+						fill: true,
+						borderWidth: 2,
+						data: received_fill
+					}, {
+						label: "Received NAS",
+						borderColor: '#fdaf4b',
+						pointBackgroundColor: 'rgba(253, 175, 75, 0.6)',
+						pointRadius: 0,
+						backgroundColor: 'rgba(253, 175, 75, 0.4)',
+						legendColor: '#fdaf4b',
+						fill: true,
+						borderWidth: 2,
+						data: received_nas
+					}, {
+						label: "Ready for Pickup/Delivery",
+						borderColor: '#177dff',
+						pointBackgroundColor: 'rgba(23, 125, 255, 0.6)',
+						pointRadius: 0,
+						backgroundColor: 'rgba(23, 125, 255, 0.4)',
+						legendColor: '#177dff',
+						fill: true,
+						borderWidth: 2,
+						data: ready_pd
+					},{
+						label: "Delivered",
+						borderColor: '#264733',
+						pointBackgroundColor: '#264733',
+						pointRadius: 0,
+						backgroundColor: '#26ba61',
+						legendColor: '#26ba61',
+						fill: true,
+						borderWidth: 2,
+						data: delivered
+					}
+					]
+				},
+				options : {
+					responsive: true, 
+					maintainAspectRatio: false,
+					legend: {
+						display: false
+					},
+					tooltips: {
+						bodySpacing: 4,
+						mode:"nearest",
+						intersect: 0,
+						position:"nearest",
+						xPadding:10,
+						yPadding:10,
+						caretPadding:10
+					},
+					layout:{
+						padding:{left:5,right:5,top:15,bottom:15}
+					},
+					scales: {
+						yAxes: [{
+							ticks: {
+								fontStyle: "500",
+								beginAtZero: false,
+								maxTicksLimit: 5,
+								padding: 10
+							},
+							gridLines: {
+								drawTicks: false,
+								display: false
+							}
+						}],
+						xAxes: [{
+							gridLines: {
+								zeroLineColor: "transparent"
+							},
+							ticks: {
+								padding: 10,
+								fontStyle: "500"
+							}
+						}]
+					}, 
+					legendCallback: function(chart) { 
+						var text = []; 
+						text.push('<ul class="' + chart.id + '-legend html-legend">'); 
+						for (var i = 0; i < chart.data.datasets.length; i++) { 
+							text.push('<li><span style="background-color:' + chart.data.datasets[i].legendColor + '"></span>'); 
+							if (chart.data.datasets[i].label) { 
+								text.push(chart.data.datasets[i].label); 
+							} 
+							text.push('</li>'); 
+						} 
+						text.push('</ul>'); 
+						return text.join(''); 
+					}  
+				}
+			});
+				var myLegendContainer = document.getElementById("myChartLegend");
+				// generate HTML legend
+				myLegendContainer.innerHTML = statisticsChart.generateLegend();
+				// bind onClick event to all LI-tags of the legend
+				var legendItems = myLegendContainer.getElementsByTagName('li');
+				for (var i = 0; i < legendItems.length; i += 1) {
+					legendItems[i].addEventListener("click", legendClickCallback, false);
+				}
+			}
+			$.ajax({
+				url: '/api/warehouse/get_packages_7days_status',
+				dataType: "json",
+				type: "GET",
+				success: function(data) {
+					userStatistics(data)
+				}
+			})
 	</script>
 </body>
 
