--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -170,35 +170,39 @@
 	<%- block('scripts').toString() %>
 
 	<script>
-		$('.filter-date').datetimepicker({
-		  format: 'MM-DD-YYYY',
-		  useCurrent: false,
-		  showTodayButton: true,
-		  showClear: true,
-		  toolbarPlacement: 'bottom',
-		  sideBySide: true,
-		  icons: {
-		    date: 'fa fa-calendar',
-		    up: 'fa fa-arrow-up',
-		    down: 'fa fa-arrow-down',
-		    previous: 'fa fa-chevron-left',
-		    next: 'fa fa-chevron-right',
-		    today: 'fa fa-clock',
-		    clear: 'fa fa-trash',
-		  },
-		});
-		$.ajax({
-		 url: '/api/warehouse/get_packages_status',
-		 dataType: "json",
-		 type: "GET",
-		 success: function(data){
-		 	chartData(data)
-		 }
-		})
-		$('.flightdate').datetimepicker({
-			format: 'MM/DD/YYYY',
-		});
-		function chartData(data){
+		if (window.location.pathname === '/dashboard') {
+			$('.filter-date').datetimepicker({
+				format: 'MM-DD-YYYY',
+				useCurrent: false,
+				showTodayButton: true,
+				showClear: true,
+				toolbarPlacement: 'bottom',
+				sideBySide: true,
+				icons: {
+					date: 'fa fa-calendar',
+					up: 'fa fa-arrow-up',
+					down: 'fa fa-arrow-down',
+					previous: 'fa fa-chevron-left',
+					next: 'fa fa-chevron-right',
+					today: 'fa fa-clock',
+					clear: 'fa fa-trash',
+				},
+			});
+			
+			$.ajax({
+				url: '/api/warehouse/get_packages_status',
+				dataType: "json",
+				type: "GET",
+				success: function(data){
+					chartData(data)
+				}
+			})
+		
+			$('.flightdate').datetimepicker({
+				format: 'MM/DD/YYYY',
+			});
+
+			function chartData(data) {
 			Circles.create({
 				id: 'circles-1',
 				radius: 45,
@@ -285,15 +289,15 @@
 			})
 		}	
 		
-		$('#lineChart').sparkline([105, 103, 123, 100, 95, 105, 115], {
-			type: 'line',
-			height: '70',
-			width: '100%',
-			lineWidth: '2',
-			lineColor: '#ffa534',
-			fillColor: 'rgba(255, 165, 52, .14)'
-		});
-		function userStatistics(data) {
+			$('#lineChart').sparkline([105, 103, 123, 100, 95, 105, 115], {
+				type: 'line',
+				height: '70',
+				width: '100%',
+				lineWidth: '2',
+				lineColor: '#ffa534',
+				fillColor: 'rgba(255, 165, 52, .14)'
+			});
+			function userStatistics(data) {
 			let labels = Object.keys(data);
 
 			let received_fill = [];
@@ -424,14 +428,15 @@
 					legendItems[i].addEventListener("click", legendClickCallback, false);
 				}
 			}
-			$.ajax({
-				url: '/api/warehouse/get_packages_7days_status',
-				dataType: "json",
-				type: "GET",
-				success: function(data) {
-					userStatistics(data)
-				}
-			})
+				$.ajax({
+					url: '/api/warehouse/get_packages_7days_status',
+					dataType: "json",
+					type: "GET",
+					success: function(data) {
+						userStatistics(data)
+					}
+				})
+			}
 	</script>
 </body>
 
