Fix - package count issue and aded some validations.

--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -73,7 +73,7 @@
               <td><%= pkg.weight%></td>
               <td><%= helpers.calculatePackageVolumetricWeight(pkg).toFixed(2) %> lbs</td>
               <td><%= pkg.dimensions %></td>
-              <td><%= pkg.lastStatusText %></td>
+              <td class="lastStatusText_field"><%= pkg.lastStatusText %></td>
               <td><%= pkg.awbId %></td>
               <td class="text-center">
                 <a
