--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,6 +73,7 @@
 	<script src="../assets/js/atlantis.min.js"></script>
 	<script src="../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
 	<script src="../js/auth/login.js"></script>
+	<script src="../js/global-search.js"></script>
 </body>
 
 </html>
