--- a/views/shared/__main_header.ejs
+++ b/views/shared/__main_header.ejs
@@ -26,15 +26,21 @@
 	<nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
 
 		<div class="container-fluid">
-			<div class="collapse" id="search-nav">
-				<form class="navbar-left navbar-form nav-search mr-md-3">
-					<div class="input-group">
-						<div class="input-group-prepend">
-							<button type="submit" class="btn btn-search pr-1">
+			<div class="collapse" id="search-nav" style="max-width: 480px !important;">
+				<form id="global-search-form" class="navbar-left navbar-form nav-search mr-md-3">
+					<div class="input-group mb-3" style="margin-top: 12px;">
+						<select class="custom-select" id="group-search-select-input" style="height: 42px;">
+							<option selected value="default">Choose...</option>
+							<option value="Package">Package</option>
+							<option value="Customer">Customer</option>
+							<option value="Awb">Awb</option>
+						</select>
+						<input type="text" class="form-control" autocomplete="off" placeholder="Search..." id="group-search-input-field" style="width: 240px;" aria-label="Text input with dropdown button">
+						<div class="input-group-append">
+							<button id="global-search-button" style="cursor: pointer;" type="button" class="btn btn-search pr-1">
 								<i class="fa fa-search search-icon"></i>
 							</button>
 						</div>
-						<input type="text" placeholder="Search ..." class="form-control">
 					</div>
 				</form>
 			</div>
