--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -50,6 +50,37 @@
 	</div>
 	<!-- Loading ends -->
 
+	<!-- Global Search Modal Start -->
+	<div class="modal fade" id="global-search-data-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Search Result</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div class="table-responsive">
+						<table id="global-search-table-data" class="display table table-striped table-hover">
+							<thead>
+								<tr>
+									<th>Id</th>
+									<th>Show details</th>
+								</tr>
+							</thead>
+							<tbody></tbody>    
+						</table>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" id="global-search-close-button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div> 
+	<!-- Global Search Modal End -->
+
 	<div class="wrapper">
 		<% include __main_header.ejs %>
 		<% include __sidebar.ejs %>
@@ -166,6 +197,8 @@
 
 	<!-- Printer -->
 	<script src="/assets/js/plugin/print/print.min.js"></script>
+
+	<script src="/assets/js/global-search.js"></script>
 
 	<%- block('scripts').toString() %>
 
