--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -60,13 +60,13 @@
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
-				<div class="modal-body">
+				<div class="modal-body"> 
 					<div class="table-responsive">
 						<table id="global-search-table-data" class="display table table-striped table-hover">
 							<thead>
 								<tr>
 									<th>Id</th>
-									<th>Show details</th>
+									<th><i class="fa fa-search" aria-hidden="true"></i></th>
 								</tr>
 							</thead>
 							<tbody></tbody>    
@@ -74,7 +74,7 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="button" id="global-search-close-button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" id="global-search-close-button" class="btn btn-primary" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
