Connect barcode to mongo and added barcode db-seed.

--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -270,16 +270,16 @@
         <label for="packageType">Package Type</label>
         <select class='form-control' id='packageType' name="packageType" required>
           <option></option>
-          <option>BOX</option>
-          <option>BAG</option>
-          <option>Envelope</option>
-          <option>Pallet</option>
-          <option>Suitcase</option>
-          <option>Can</option>
-          <option>Shrink Wrapped Box</option>
-          <option>Shrink Wrapped Pallet</option>
-          <option>Cooler</option>
-          <option>Other</option>
+          <option value="BOX">BOX</option>
+          <option value="BAG">BAG</option>
+          <option value="Envelope">Envelope</option>
+          <option value="Pallet">Pallet</option>
+          <option value="Suitcase">Suitcase</option>
+          <option value="Can">Can</option>
+          <option value="Shrink Wrapped Box">Shrink Wrapped Box</option>
+          <option value="Shrink Wrapped Pallet">Shrink Wrapped Pallet</option>
+          <option value="Cooler">Cooler</option>
+          <option value="Other">Other</option>
         </select>
       </div>
       <div class='form-group'>
