--- a/views/pages/warehouse/delivery/list.ejs
+++ b/views/pages/warehouse/delivery/list.ejs
@@ -35,8 +35,8 @@
               <td class="text-center">
                 <a href='manage/<%=delivery.id%>/get' class="btn btn-link btn-primary px-2" data-toggle="tooltip"
                   data-original-title="Delivery Packages"> <i class="fa fa-box-open"></i> </a>
-                <a class="btn btn-link btn-primary btn-close-delivery px-2" data-toggle="modal"
-                  data-id="<%=delivery.id%>" data-target="#close-delivery"> <i class="fa fa-check-circle"></i> </a>
+                <a class="btn btn-link btn-primary btn-close-delivery px-2 close-deliveryy" data-toggle="modal"
+                  data-id="<%=delivery.id%>"> <i class="fa fa-check-circle"></i> </a>
               </td>
             </tr>
             <% }) %>
@@ -98,29 +98,6 @@
           <input type="submit" class="btn btn-primary save-delivery" value="Create" />
         </div>
       </form>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="close-delivery" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
-  aria-hidden="true" style="display: none;">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h2 class="modal-title" id="exampleModalLabel2">Close this Delivery</h2>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class='form-group'>
-          <h3>Are you sure you want to close this delivery?</h3>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger close-modal" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary close-delivery">Close Delivery</button>
-      </div>
     </div>
   </div>
 </div>
