--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -3,18 +3,18 @@
 		<div class="sidebar-content">
 			<div class="user">
 				<div class="avatar-sm float-left mr-2">
-					<img src="https://via.placeholder.com/60x60" alt="..." class="avatar-img rounded-circle">
+					<!--<img src="https://via.placeholder.com/60x60" alt="..." class="avatar-img rounded-circle">-->
 				</div>
 				<div class="info">
 					<a data-toggle="collapse" href="#userCollapse" aria-expanded="true">
 						<span>
 							<span class="user-level"><%=user.firstName + ' ' + user.lastName%></span>
 							<span class="user-level">Administrator</span>
-							<span class="caret"></span>
+							<!--<span class="caret"></span>-->
 						</span>
 					</a>
 					<div class="clearfix"></div>
-					<div class="collapse in" id="userCollapse">
+					<!--<div class="collapse in" id="userCollapse">
 						<ul class="nav">
 							<li>
 								<a href="#profile">
@@ -32,7 +32,7 @@
 								</a>
 							</li>
 						</ul>
-					</div>
+					</div>-->
 				</div>
 			</div>
 			<ul class="nav nav-primary">
