--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -148,7 +148,7 @@
           <div class="d-flex mr-1">
             <h3 class="card-title text-muted">AWB Purchase Order List</h3>
             <a href="#" data-toggle="modal" data-target="#add-purchase-order-item-modal"
-              class="btn btn-info btn-round ml-auto mr-5">Add Item</a>
+              class="btn btn-info btn-round ml-auto mr-5">Add P.O</a>
           </div>
           <div class="row">
             <div class="table-responsive mx-5 mt-3">
