order of lbs and kg

--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -262,8 +262,9 @@
       <div class='form-group'>
         <label for="packageType">Package calculation</label>
         <select class='form-control' id='packageCalculation' name="packageCalculation" required>
-          <option>kg</option>
-          <option>lbs</option>
+          <option></option> 
+          <option selected="selected">lbs</option>
+          <option>kg</option>         
         </select>
       </div>
       <div class='form-group'>
