--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -230,10 +230,12 @@
       <div class='form-group'>
         <label for="packageType">Package calculation</label>
         <select class='form-control' id='packageCalculation' name="packageCalculation" required>
-          <option>kg</option>
-          <option>lbs</option>
+          <option></option>          
+          <option selected>lbs</option>
+          <option>Kg</option>                    
         </select>
       </div>
+      
       <div class='form-group'>
         <label for="packageType">Package Type</label>
         <select class='form-control' id='packageType' name="packageType" required>
