--- a/views/pages/fleet/driver/edit.ejs
+++ b/views/pages/fleet/driver/edit.ejs
@@ -23,23 +23,23 @@
       </div>
       <div class="form-group form-show-validation row">
         <label for="mobile" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Mobile <span
-            class="required-label">*</span></label>
+            class="required-label"></span></label>
         <div class="col-lg-4 col-md-9 col-sm-8">
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text" id="username-addon">@</span>
             </div>
             <input type="number" class="form-control" placeholder="Mobile Number" id="mobile" name="mobile"
-              value="<%= driver.mobile %>" required>
+              value="<%= driver.mobile %>" >
           </div>
         </div>
       </div>
       <div class="form-group form-show-validation row">
         <label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Email Address <span
-            class="required-label">*</span></label>
+            class="required-label"></span></label>
         <div class="col-lg-4 col-md-9 col-sm-8">
           <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com"
-            value="<%= driver.email %>" required>
+            value="<%= driver.email %>">
         </div>
       </div>
       <!-- <div class="separator-solid"></div>
