--- a/views/pages/fleet/pilot/edit.ejs
+++ b/views/pages/fleet/pilot/edit.ejs
@@ -34,14 +34,14 @@
               <span class="input-group-text" id="username-addon">@</span>
             </div>
             <input type="number" class="form-control" placeholder="Mobile Number" aria-label="mobile"
-              aria-describedby="username-addon" id="mobile" name="mobile" required value="<%= pilot.mobile%>">
+              aria-describedby="username-addon" id="mobile" name="mobile"  value="<%= pilot.mobile%>">
           </div>
         </div>
       </div>
       <div class="form-group form-show-validation row">
         <label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Email Address </label>
         <div class="col-lg-4 col-md-9 col-sm-8">
-          <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required
+          <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com"
             value="<%= pilot.email%>">
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
             else.</small>
