--- a/views/pages/fleet/plane/edit.ejs
+++ b/views/pages/fleet/plane/edit.ejs
@@ -9,7 +9,7 @@
         <label for="tailNumber" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Name </label>
         <div class="col-lg-4 col-md-9 col-sm-8">
           <input type="text" class="form-control" id="tailNumber" name="tailNumber" placeholder="Tail Number"
-            value="<%= plane.tailNumber%>" required>
+            value="<%= plane.tailNumber%>" disabled>
         </div>
       </div>
       <div class="form-group form-show-validation row">
