--- a/views/pages/fleet/plane/list.ejs
+++ b/views/pages/fleet/plane/list.ejs
@@ -11,6 +11,7 @@
           <thead>
             <tr>
               <th>Tail Number</th>
+              <th>Flight Name</th>
               <th>Pilot </th>
               <th>Airline </th>
               <th>Air Craft Type</th>
@@ -22,6 +23,7 @@
             <% planes.forEach(plane => { %>
             <tr data-record="<%= plane.id%>">
               <td><%=plane.tailNumber%></td>
+              <td><%=plane.flightName%></td>
               <td><%=plane.pilot.firstName + ' ' + plane.pilot.lastName %></td>
               <td><%=plane.airline ? plane.airline.name : '' %></td>
               <td><%=plane.aircraftType%></td>
