--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -181,7 +181,7 @@
           <div class="separator-solid"></div>
           <div class="d-flex mr-1">
             <h3 class="card-title text-muted">Packages - <span class='package-info'>0 Pieces / 0.00 lbs</span></h3>
-            <a href="#add-package-popup" class="btn btn-info btn-round btn-add-package ml-auto mr-5">Add
+            <a href="#add-package-popup" class="btn btn-info btn-round btn-add-package ml-auto mr-5" id="link-add-package-popup">Add
               Package</a>
           </div>
           <div class="row">
@@ -254,13 +254,21 @@
       </div>
       <div class='form-group'>
         <label for="originBarcode">Origin barcode</label>
-        <select id="originBarcode" name="originBarcode" class='form-control' required>
-          <option></option>
-          <% barcodes.forEach(barcode => { %>
-          <option value="<%= barcode.barcode+','+barcode.id %>"><%=barcode.barcode%></option>
-          <% }) %>
-        </select>
-      </div>
+        <div class="row">
+          <div class="col-lg-11 col-md-11 col-sm-11">
+            <select id="originBarcode" name="originBarcode" class='form-control' required>
+              <option></option>
+              <% barcodes.forEach(barcode => { %>
+              <option value="<%= barcode.barcode+','+barcode.id %>"><%=barcode.barcode%></option>
+              <% }) %>
+            </select>
+          </div>
+          <div class="input-group-append col-lg-1">
+            <a href="#" data-toggle="modal" data-target="#add-barcode-popup" onclick="closeAddPackage()">
+              <span class="input-group-text">+</span></a>
+          </div>
+        </div>
+      </div>   
       <div class='form-group'>
         <label>Dimensions</label>
         <div class='row'>
@@ -709,6 +717,32 @@
         <button type="button" class="btn btn-danger rm-package" id='rmPackage'>Delete</button>
       </div>
     </div>
+  </div>
+</div>
+<div class="modal fade" id="add-barcode-popup" tabindex="-1" role="dialog" style="display: none;">
+  <div class="modal-dialog" role="document" >
+    <form method="post" id="add-barcode-form">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">Add Barcode</h2>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class='form-group row'>
+            <label for="carrier-name" class="col-md-3 mt-sm-2 text-right">Bacrode</label>
+            <div class="col-md-8">
+              <input type='text' class='form-control' placeholder="Bacrode" id='barcode' name="barcode" required />
+            </div>
+          </div>          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary" id='save-barcode'>Create</button>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
 
