--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,8 +72,8 @@
 	<script src="../assets/js/core/bootstrap.min.js"></script>
 	<script src="../assets/js/atlantis.min.js"></script>
 	<script src="../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
+	<script src="../assets/js/global-search.js"></script>
 	<script src="../js/auth/login.js"></script>
-	<script src="../js/global-search.js"></script>
 </body>
 
 </html>
