--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
 							<!-- <div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="rememberme">
 							<label class="custom-control-label m-0" for="rememberme">Remember Me</label>
-						</div> -->
+						</div> --->
 							<button type="submit" class="btn btn-primary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign
 								In</button>
 						</div>
