--- a/views/password-set-new-customer.ejs
+++ b/views/password-set-new-customer.ejs
@@ -69,7 +69,7 @@
   <script src="../../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
 
   <script src="/js/utils.js"></script>
-  <script src="/js/auth/new-password.js"></script>
+  <script src="/js/auth/new-password-customer.js"></script>
 </body>
 
 </html>
