--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -255,6 +255,12 @@
 						<p>Hazmat </p>
 					</a>
 				</li>
+				<!--<li class="nav-item <% if (page.includes('/cube/')) { %> active <% } %>">
+					<a href="/warehouse/cube/list">
+						<i class="fa fa-exclamation-triangle"></i>
+						<p>Cube </p>
+					</a>
+				</li>-->
 				<li class="nav-item <% if (page.includes('/service-type/')) { %> active <% } %>">
 					<a href="/warehouse/service-type/list">
 						<i class="fa fa-wrench"></i>
