--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -47,6 +47,12 @@
 						<p>Locations </p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/zones/')) { %> active <% } %>">
+					<a href="/admin/zones/list">
+						<i class="fa fa-map-marker-alt"></i>
+						<p>Zones </p>
+					</a>
+				</li>
 				<% } %>
 
 				<li class="nav-section">
