--- a/views/pages/admin/zone/list.ejs
+++ b/views/pages/admin/zone/list.ejs
@@ -7,7 +7,7 @@
         <a href='create' class='btn btn-primary btn-round ml-md-auto float-right'>Add Zone</a>
       </div>
       <div class="card-body">
-        <table class="display table table-striped table-hover dataTable location-table ">
+        <table class="display table table-striped table-hover dataTable zone-table ">
           <thead>
             <tr>
               <th>Name</th>
@@ -19,10 +19,10 @@
             <% zones.forEach(zone => { %>
             <tr data-record="<%=zone.id%>">
               <td><%=zone.name%></td>
-              <td><%=(zone.location && zone.locationlocationService.name) || '' %></td>                            
+              <td><%=(zone.location && zone.location.name) || '' %></td>                            
               <td>
                 <a href="manage/<%=zone.id%>/get"><i class='fas fa-pencil-alt'></i></a>
-                <a href='#' class='rm-location ml-3' data-id='<%=zone.id%>'><i class="fas fa-trash"></i></a>
+                <a href='#' class='rm-zone ml-3' data-id='<%=zone.id%>'><i class="fas fa-trash"></i></a>
               </td>
             </tr>
             <% }) %>
