--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -218,7 +218,7 @@
     <div class="card-body">
       <div class='form-group'>
         <button type='button' class="btn btn-small btn-info btn-copy-last">Copy Last Package</button>
-      </div>
+      </div>      
       <div class='form-group'>
         <label for="description">Description</label>
         <textarea type='text' class='form-control' id='description' name='description' rows="3" required></textarea>
@@ -256,10 +256,11 @@
         <label for="originBarcode">Origin barcode</label>
         <div class="row">
           <div class="col-lg-11 col-md-11 col-sm-11">
+            <%const pbarcode = processBarcode?processBarcode.barcode:'';%>
             <select id="originBarcode" name="originBarcode" class='form-control' required>
               <option></option>
-              <% barcodes.forEach(barcode => { %>
-              <option value="<%= barcode.barcode+','+barcode.id %>"><%=barcode.barcode%></option>
+              <% barcodes.forEach(barcode => {%>
+              <option <%if( pbarcode== barcode.id ){%>selected=="selected"<%}%> value="<%= barcode.barcode+','+barcode.id %>"><%=barcode.barcode%></option>
               <% }) %>
             </select>
           </div>
