--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -251,6 +251,10 @@
       <div class='form-group'>
         <button type='button' class="btn btn-small btn-info btn-copy-last">Copy Last Package</button>
       </div>
+      <div class='form-group copy-package'>
+        <label for="weight">No of Copy</label>
+        <input type='number' class='form-control' id='copy' name='copy' value="1" required />
+      </div>
       <div class='form-group'>
         <label for="description">Description</label>
         <textarea type='text' class='form-control' id='description' name='description' rows="3" required></textarea>
