--- a/views/pages/warehouse/awb/preview.ejs
+++ b/views/pages/warehouse/awb/preview.ejs
@@ -34,7 +34,7 @@
               </div>
               <div class="col-md-4 info-invoice">
                 <h5 class="sub">Bill ID</h5>
-                <p>#<%= awb._id %></p>
+                <p><%= "AWB #"+awb.awbId %></p>
               </div>
               <div class="col-md-4 info-invoice">
                 <h5 class="sub">Customer</h5>
