--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -74,7 +74,7 @@
               <td><%= helpers.calculatePackageVolumetricWeight(pkg).toFixed(2) %> lbs</td>
               <td><%= pkg.dimensions %></td>
               <td class="lastStatusText_field"><%= pkg.lastStatusText %></td>
-              <td><%= pkg.awbId %></td>
+              <td><%= pkg.awbId.awbId %></td>
               <td class="text-center">
                 <a
                   class="btn btn-link btn-primary btn-print-pkg"
