--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -77,7 +77,7 @@
     <div class="card full-height">
       <div class="card-header">
         <div class="row">
-          <div class="card-title pd-18 col-md-2 ">Post by Etc Packages</div>
+          <div class="card-title pd-18 col-md-2 ">Post Boxes Etc Packages</div>
           <div class="card-tools  pd-18 col-md-10">
             <form method="post" onsubmit="filterData(event)">
               <div class="row">
