--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -36,7 +36,7 @@
                   <tr data-record="<%= awb._id %>">
                     <td><%=awb.dateCreated%></td>
                     <td><%=awb.customer.pmb %></td>
-                    <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId ? awb.awbId : awb._id%></a></td>
+                    <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
                     <td><%=helpers.getFullName(awb.customer)%></td>
                     <td><%=awb.shipper.name %></td>
                     <td><%=awb.carrier.name %></td>
@@ -85,7 +85,7 @@
                   <tr data-record="<%= awb._id %>">
                     <td><%=awb.dateCreated%></td>
                     <td><%= awb.customer && awb.customer.pmb %></td>
-                    <td><a href="manage/<%=awb._id%>/preview"><%=awb._id%></a></td>
+                    <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
                     <td><%= helpers.getFullName(awb.customer)%></td>
                     <td><%=awb.shipper.name %></td>
                     <td><%=awb.carrier.name %></td>
