--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -218,8 +218,9 @@
     <div class="card-body">
       <div class='form-group'>
         <button type='button' class="btn btn-small btn-info btn-copy-last">Copy Last Package</button>
+        <button type='button' class="btn btn-small btn-info copy-package-button">Copy Package</button>
       </div>
-      <div class='form-group copy-package'>
+      <div class='form-group copy-package-text' style="display: none;" >
         <label for="weight">No of Copy</label>
         <input type='number' class='form-control' id='copy' name='copy' value="1" required />
       </div>
