--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -261,12 +261,11 @@
         <label for="originBarcode">Origin barcode</label>
         <div class="row">
           <div class="col-lg-9 col-md-9 col-sm-9">
-
-            <%const pbarcode = processBarcode?processBarcode.barcode:'';%>
+            <%const pbarcode = processBarcode?processBarcode.barcode:'';%>            
             <select id="originBarcode" name="originBarcode" class='form-control' required>
               <option></option>
               <% barcodes.forEach(barcode => {%>
-              <option <%if( pbarcode== barcode.id ){%>selected=="selected"<%}%> value="<%= barcode.barcode+','+barcode.id %>"><%=barcode.barcode%></option>
+              <option <%if( pbarcode._id== barcode.id ){%>selected=="selected"<%}%> value="<%= barcode.barcode+','+barcode.id %>"><%=barcode.barcode%></option>
               <% }) %>
             </select>
           </div>
